// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorMain should correctly render for an error page for News 1`] = `
.emotion-1 {
  width: 100%;
  padding-bottom: 4rem;
}

@supports (display: grid) {
  .emotion-1 {
    display: grid;
    position: initial;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(8, 1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 80rem) {
    .emotion-1 {
      grid-template-columns: repeat(20, 1fr);
      grid-column-end: span 20;
      grid-column-gap: 1rem;
    }
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-1 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width: 80rem) {
  .emotion-1 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-3 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-3 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-3 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-3 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-3 {
    margin-left: 16.666666666666668%;
  }
}

@media (min-width: 80rem) {
  .emotion-3 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display: grid) {
  .emotion-3 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-start: 2;
    }
  }

  @media (min-width: 80rem) {
    .emotion-3 {
      grid-template-columns: repeat(12, 1fr);
      grid-column-end: span 12;
      grid-column-start: 5;
    }
  }
}

.emotion-5 {
  font-size: 1.25rem;
  line-height: 1.5rem;
  color: #B80000;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 600;
  padding: 2.5rem 0 0.5rem 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-5 {
    font-size: 1.375rem;
    line-height: 1.625rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-5 {
    font-size: 1.75rem;
    line-height: 2rem;
  }
}

.emotion-7 {
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  color: #3F3F42;
  margin-top: 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-7 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-7 {
    font-size: 2.75rem;
    line-height: 3rem;
  }
}

.emotion-9 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #141414;
  padding-bottom: 1.5rem;
  margin: 0;
  padding-top: 0.2rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-9 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-9 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

.emotion-17 {
  color: #222222;
  border-bottom: 1px solid #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-17:visited {
  color: #6E6E73;
  border-bottom: 1px solid #6E6E73;
}

.emotion-17:focus,
.emotion-17:hover {
  border-bottom: 2px solid #B80000;
  color: #B80000;
}

<div>
  <main
    class="emotion-0 emotion-1 emotion-2"
    dir="ltr"
    role="main"
  >
    <div
      class="emotion-3 emotion-2"
      dir="ltr"
    >
      <span
        class="emotion-5 emotion-6"
        data-e2e="status-code"
      >
        StatusCode
      </span>
      <h1
        class="emotion-7 emotion-8"
        id="content"
        tabindex="-1"
      >
        A error has occured
      </h1>
      <p
        class="emotion-9 emotion-10"
      >
        Something happened, please try an option
      </p>
      <ul>
        <li
          class="emotion-9 emotion-10"
        >
          Option one
        </li>
        <li
          class="emotion-9 emotion-10"
        >
          Option two
        </li>
      </ul>
      <p
        class="emotion-9 emotion-10"
      >
        You can do 
        <a
          class="focusIndicatorReducedWidth emotion-17 emotion-18"
          href="https://www.bbc.com"
        >
          this
        </a>
         thing
      </p>
    </div>
  </main>
</div>
`;

exports[`ErrorMain should correctly render for an error page for arabic 1`] = `
.emotion-1 {
  width: 100%;
  padding-bottom: 4rem;
}

@supports (display: grid) {
  .emotion-1 {
    display: grid;
    position: initial;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(8, 1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 80rem) {
    .emotion-1 {
      grid-template-columns: repeat(20, 1fr);
      grid-column-end: span 20;
      grid-column-gap: 1rem;
    }
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-1 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width: 80rem) {
  .emotion-1 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-3 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-3 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-3 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-3 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-3 {
    margin-left: 16.666666666666668%;
  }
}

@media (min-width: 80rem) {
  .emotion-3 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display: grid) {
  .emotion-3 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-start: 2;
    }
  }

  @media (min-width: 80rem) {
    .emotion-3 {
      grid-template-columns: repeat(12, 1fr);
      grid-column-end: span 12;
      grid-column-start: 5;
    }
  }
}

.emotion-5 {
  font-size: 1.25rem;
  line-height: 1.75rem;
  color: #B80000;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 600;
  padding: 2.5rem 0 0.5rem 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-5 {
    font-size: 1.375rem;
    line-height: 1.875rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-5 {
    font-size: 1.75rem;
    line-height: 2.375rem;
  }
}

.emotion-7 {
  font-size: 1.5rem;
  line-height: 2rem;
  font-family: "BBC Reith Qalam","Times New Roman",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #3F3F42;
  margin-top: 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-7 {
    font-size: 1.75rem;
    line-height: 2.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-7 {
    font-size: 2.5rem;
    line-height: 3.375rem;
  }
}

.emotion-9 {
  font-size: 0.9375rem;
  line-height: 1.5rem;
  font-family: "BBC Reith Qalam","Times New Roman",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #141414;
  padding-bottom: 1.5rem;
  margin: 0;
  padding-top: 0.2rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-9 {
    font-size: 1rem;
    line-height: 1.625rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-9 {
    font-size: 1rem;
    line-height: 1.625rem;
  }
}

.emotion-17 {
  color: #222222;
  border-bottom: 1px solid #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-17:visited {
  color: #6E6E73;
  border-bottom: 1px solid #6E6E73;
}

.emotion-17:focus,
.emotion-17:hover {
  border-bottom: 2px solid #B80000;
  color: #B80000;
}

<div>
  <main
    class="emotion-0 emotion-1 emotion-2"
    dir="ltr"
    role="main"
  >
    <div
      class="emotion-3 emotion-2"
      dir="ltr"
    >
      <span
        class="emotion-5 emotion-6"
        data-e2e="status-code"
      >
        StatusCode
      </span>
      <h1
        class="emotion-7 emotion-8"
        id="content"
        tabindex="-1"
      >
        A error has occured
      </h1>
      <p
        class="emotion-9 emotion-10"
      >
        Something happened, please try an option
      </p>
      <ul>
        <li
          class="emotion-9 emotion-10"
        >
          Option one
        </li>
        <li
          class="emotion-9 emotion-10"
        >
          Option two
        </li>
      </ul>
      <p
        class="emotion-9 emotion-10"
      >
        You can do 
        <a
          class="focusIndicatorReducedWidth emotion-17 emotion-18"
          href="https://www.bbc.com"
        >
          this
        </a>
         thing
      </p>
    </div>
  </main>
</div>
`;

exports[`ErrorMain should correctly render for an error page for pashto 1`] = `
.emotion-1 {
  width: 100%;
  padding-bottom: 4rem;
}

@supports (display: grid) {
  .emotion-1 {
    display: grid;
    position: initial;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(8, 1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 80rem) {
    .emotion-1 {
      grid-template-columns: repeat(20, 1fr);
      grid-column-end: span 20;
      grid-column-gap: 1rem;
    }
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-1 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width: 80rem) {
  .emotion-1 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-3 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-3 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-3 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-3 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-3 {
    margin-left: 16.666666666666668%;
  }
}

@media (min-width: 80rem) {
  .emotion-3 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display: grid) {
  .emotion-3 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-start: 2;
    }
  }

  @media (min-width: 80rem) {
    .emotion-3 {
      grid-template-columns: repeat(12, 1fr);
      grid-column-end: span 12;
      grid-column-start: 5;
    }
  }
}

.emotion-5 {
  font-size: 1.25rem;
  line-height: 1.75rem;
  color: #B80000;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 600;
  padding: 2.5rem 0 0.5rem 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-5 {
    font-size: 1.375rem;
    line-height: 1.875rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-5 {
    font-size: 1.75rem;
    line-height: 2.375rem;
  }
}

.emotion-7 {
  font-size: 1.5rem;
  line-height: 2rem;
  font-family: "BBC Reith Qalam","Times New Roman",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #3F3F42;
  margin-top: 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-7 {
    font-size: 1.75rem;
    line-height: 2.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-7 {
    font-size: 2.5rem;
    line-height: 3.375rem;
  }
}

.emotion-9 {
  font-size: 0.9375rem;
  line-height: 1.5rem;
  font-family: "BBC Reith Qalam","Times New Roman",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #141414;
  padding-bottom: 1.5rem;
  margin: 0;
  padding-top: 0.2rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-9 {
    font-size: 1rem;
    line-height: 1.625rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-9 {
    font-size: 1rem;
    line-height: 1.625rem;
  }
}

.emotion-17 {
  color: #222222;
  border-bottom: 1px solid #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-17:visited {
  color: #6E6E73;
  border-bottom: 1px solid #6E6E73;
}

.emotion-17:focus,
.emotion-17:hover {
  border-bottom: 2px solid #B80000;
  color: #B80000;
}

<div>
  <main
    class="emotion-0 emotion-1 emotion-2"
    dir="ltr"
    role="main"
  >
    <div
      class="emotion-3 emotion-2"
      dir="ltr"
    >
      <span
        class="emotion-5 emotion-6"
        data-e2e="status-code"
      >
        StatusCode
      </span>
      <h1
        class="emotion-7 emotion-8"
        id="content"
        tabindex="-1"
      >
        A error has occured
      </h1>
      <p
        class="emotion-9 emotion-10"
      >
        Something happened, please try an option
      </p>
      <ul>
        <li
          class="emotion-9 emotion-10"
        >
          Option one
        </li>
        <li
          class="emotion-9 emotion-10"
        >
          Option two
        </li>
      </ul>
      <p
        class="emotion-9 emotion-10"
      >
        You can do 
        <a
          class="focusIndicatorReducedWidth emotion-17 emotion-18"
          href="https://www.bbc.com"
        >
          this
        </a>
         thing
      </p>
    </div>
  </main>
</div>
`;

exports[`ErrorMain should correctly render for an error page for persian 1`] = `
.emotion-1 {
  width: 100%;
  padding-bottom: 4rem;
}

@supports (display: grid) {
  .emotion-1 {
    display: grid;
    position: initial;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(8, 1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 80rem) {
    .emotion-1 {
      grid-template-columns: repeat(20, 1fr);
      grid-column-end: span 20;
      grid-column-gap: 1rem;
    }
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-1 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width: 80rem) {
  .emotion-1 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-3 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-3 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-3 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-3 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-3 {
    margin-left: 16.666666666666668%;
  }
}

@media (min-width: 80rem) {
  .emotion-3 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display: grid) {
  .emotion-3 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-start: 2;
    }
  }

  @media (min-width: 80rem) {
    .emotion-3 {
      grid-template-columns: repeat(12, 1fr);
      grid-column-end: span 12;
      grid-column-start: 5;
    }
  }
}

.emotion-5 {
  font-size: 1.25rem;
  line-height: 1.75rem;
  color: #B80000;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 600;
  padding: 2.5rem 0 0.5rem 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-5 {
    font-size: 1.375rem;
    line-height: 1.875rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-5 {
    font-size: 1.75rem;
    line-height: 2.375rem;
  }
}

.emotion-7 {
  font-size: 1.5rem;
  line-height: 2rem;
  font-family: "BBC Reith Qalam","Times New Roman",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #3F3F42;
  margin-top: 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-7 {
    font-size: 1.75rem;
    line-height: 2.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-7 {
    font-size: 2.5rem;
    line-height: 3.375rem;
  }
}

.emotion-9 {
  font-size: 0.9375rem;
  line-height: 1.5rem;
  font-family: "BBC Reith Qalam","Times New Roman",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #141414;
  padding-bottom: 1.5rem;
  margin: 0;
  padding-top: 0.2rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-9 {
    font-size: 1rem;
    line-height: 1.625rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-9 {
    font-size: 1rem;
    line-height: 1.625rem;
  }
}

.emotion-17 {
  color: #222222;
  border-bottom: 1px solid #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-17:visited {
  color: #6E6E73;
  border-bottom: 1px solid #6E6E73;
}

.emotion-17:focus,
.emotion-17:hover {
  border-bottom: 2px solid #B80000;
  color: #B80000;
}

<div>
  <main
    class="emotion-0 emotion-1 emotion-2"
    dir="ltr"
    role="main"
  >
    <div
      class="emotion-3 emotion-2"
      dir="ltr"
    >
      <span
        class="emotion-5 emotion-6"
        data-e2e="status-code"
      >
        StatusCode
      </span>
      <h1
        class="emotion-7 emotion-8"
        id="content"
        tabindex="-1"
      >
        A error has occured
      </h1>
      <p
        class="emotion-9 emotion-10"
      >
        Something happened, please try an option
      </p>
      <ul>
        <li
          class="emotion-9 emotion-10"
        >
          Option one
        </li>
        <li
          class="emotion-9 emotion-10"
        >
          Option two
        </li>
      </ul>
      <p
        class="emotion-9 emotion-10"
      >
        You can do 
        <a
          class="focusIndicatorReducedWidth emotion-17 emotion-18"
          href="https://www.bbc.com"
        >
          this
        </a>
         thing
      </p>
    </div>
  </main>
</div>
`;

exports[`ErrorMain should correctly render for an error page for urdu 1`] = `
.emotion-1 {
  width: 100%;
  padding-bottom: 4rem;
}

@supports (display: grid) {
  .emotion-1 {
    display: grid;
    position: initial;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 0.5rem;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-1 {
      grid-template-columns: repeat(8, 1fr);
      grid-column-end: span 8;
      grid-column-gap: 1rem;
    }
  }

  @media (min-width: 80rem) {
    .emotion-1 {
      grid-template-columns: repeat(20, 1fr);
      grid-column-end: span 20;
      grid-column-gap: 1rem;
    }
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-1 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width: 80rem) {
  .emotion-1 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

@media (max-width: 14.9375rem) {
  .emotion-3 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 15rem) and (max-width: 24.9375rem) {
  .emotion-3 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width: 25rem) and (max-width: 37.4375rem) {
  .emotion-3 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 37.5rem) and (max-width: 62.9375rem) {
  .emotion-3 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width: 63rem) and (max-width: 79.9375rem) {
  .emotion-3 {
    margin-left: 16.666666666666668%;
  }
}

@media (min-width: 80rem) {
  .emotion-3 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display: grid) {
  .emotion-3 {
    display: block;
    width: initial;
    margin: 0;
  }

  @media (max-width: 14.9375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 15rem) and (max-width: 24.9375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 0.5rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 25rem) and (max-width: 37.4375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 37.5rem) and (max-width: 62.9375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      padding: 0 1rem;
      grid-column-start: 1;
    }
  }

  @media (min-width: 63rem) and (max-width: 79.9375rem) {
    .emotion-3 {
      grid-template-columns: repeat(6, 1fr);
      grid-column-end: span 6;
      grid-column-start: 2;
    }
  }

  @media (min-width: 80rem) {
    .emotion-3 {
      grid-template-columns: repeat(12, 1fr);
      grid-column-end: span 12;
      grid-column-start: 5;
    }
  }
}

.emotion-5 {
  font-size: 1.25rem;
  line-height: 1.75rem;
  color: #B80000;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 600;
  padding: 2.5rem 0 0.5rem 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-5 {
    font-size: 1.375rem;
    line-height: 1.875rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-5 {
    font-size: 1.75rem;
    line-height: 2.375rem;
  }
}

.emotion-7 {
  font-size: 1.5rem;
  line-height: 2rem;
  font-family: "BBC Reith Qalam","Times New Roman",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #3F3F42;
  margin-top: 0;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-7 {
    font-size: 1.75rem;
    line-height: 2.375rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-7 {
    font-size: 2.5rem;
    line-height: 3.375rem;
  }
}

.emotion-9 {
  font-size: 0.9375rem;
  line-height: 1.5rem;
  font-family: "BBC Reith Qalam","Times New Roman",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #141414;
  padding-bottom: 1.5rem;
  margin: 0;
  padding-top: 0.2rem;
}

@media (min-width: 20rem) and (max-width: 37.4375rem) {
  .emotion-9 {
    font-size: 1rem;
    line-height: 1.625rem;
  }
}

@media (min-width: 37.5rem) {
  .emotion-9 {
    font-size: 1rem;
    line-height: 1.625rem;
  }
}

.emotion-17 {
  color: #222222;
  border-bottom: 1px solid #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-17:visited {
  color: #6E6E73;
  border-bottom: 1px solid #6E6E73;
}

.emotion-17:focus,
.emotion-17:hover {
  border-bottom: 2px solid #B80000;
  color: #B80000;
}

<div>
  <main
    class="emotion-0 emotion-1 emotion-2"
    dir="ltr"
    role="main"
  >
    <div
      class="emotion-3 emotion-2"
      dir="ltr"
    >
      <span
        class="emotion-5 emotion-6"
        data-e2e="status-code"
      >
        StatusCode
      </span>
      <h1
        class="emotion-7 emotion-8"
        id="content"
        tabindex="-1"
      >
        A error has occured
      </h1>
      <p
        class="emotion-9 emotion-10"
      >
        Something happened, please try an option
      </p>
      <ul>
        <li
          class="emotion-9 emotion-10"
        >
          Option one
        </li>
        <li
          class="emotion-9 emotion-10"
        >
          Option two
        </li>
      </ul>
      <p
        class="emotion-9 emotion-10"
      >
        You can do 
        <a
          class="focusIndicatorReducedWidth emotion-17 emotion-18"
          href="https://www.bbc.com"
        >
          this
        </a>
         thing
      </p>
    </div>
  </main>
</div>
`;
